--- a/Kaggle_digit_recognizer/use_net_fix.ipynb
+++ b/Kaggle_digit_recognizer/use_net_fix.ipynb
@@ -15,12 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('my_pytorch': conda)",
-   "metadata": {
-    "interpreter": {
-     "hash": "4aa4247aad03c0426ea4cd3b04a911f3f8b96c18bc1c724546bbedd590fde436"
-    }
-   }
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -681,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,10 +903,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import torch\n",
     "PATH='./save_model/cnn_model.pkl'\n",
     "# predict_model=CNNModel()\n",
     "# 这样不行，因为保存的时候不是torch.save(cnn_model.state_dict(),PATH)的形式，你得配套用\n",
@@ -921,6 +918,32 @@
     "predict_model=torch.load(PATH)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1.7.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# torch.save(cnn_model,'./save_model/cnn_model_2.pkl')"
    ]
   },
   {
@@ -1273,6 +1296,118 @@
     "plt.axis(\"off\")\n",
     "plt.savefig('graph.png')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(28000, 784)\n<class 'torch.Tensor'> torch.Size([28000, 1, 28, 28])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "real_test= pd.read_csv('/Users/wangluya/PycharmProjects/datasets/digit_recognizer/test.csv',dtype = np.float32)\n",
+    "features_real_test = real_test.values/255 # normalization\n",
+    "print(features_real_test.shape) # \n",
+    "\n",
+    "test = features_real_test.reshape(-1,1,28,28) # (-1,28,28,1)是错的\n",
+    "test=torch.from_numpy(test)\n",
+    "print(type(test),test.shape) # "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH='./save_model/cnn_model.pkl'\n",
+    "predict_model=torch.load(PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'torch.Tensor'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# predict results\n",
+    "results = predict_model(test)\n",
+    "print(type(results))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "torch.Size([28000, 10])\ntensor([  2.0957,  -4.6439,  21.7144,   1.7328,  -6.8833,  -4.9755, -11.5766,\n         10.0789,  -0.0531,  -4.3777], grad_fn=<SelectBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results.shape)\n",
+    "print(results[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "tensor(2) <class 'torch.Tensor'> 28000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# select the indix with the maximum probability\n",
+    "results1 = torch.max(results,1)[1] # torch.max()[1]     只返回最大值的每个索引\n",
+    "print(results1[0],type(results1),len(results1))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results2 = pd.Series(results1,name=\"Label\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.concat([pd.Series(range(1,28001),name = \"ImageId\"),results2],axis = 1)\n",
+    "\n",
+    "submission.to_csv(\"save_model/cnn_mnist_datagen.csv\",index=False)"
    ]
   },
   {
